--- a/app/views/about/index.html.erb
+++ b/app/views/about/index.html.erb
@@ -1,1 +1,10 @@
-<h2>About#index</h2>
+<section class="about-index">
+  <header class="page-header">
+    <h1>About Us</h1>
+  </header>
+  <div>
+    <p>
+      Welcome to Jungle, your number one source for all things out of the ordinary. We're dedicated to giving you the very best, with a focus on competitive pricing, uniqueness and outstanding customer service.
+    </p>
+  </div>
+</section>
